k8s/somenamespace/devops-test-task/devops-test-task-service.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: devops-test-task
    namespace: somenamespace
    labels:
        k8s-app: devops-test-task
spec:
    clusterIP: None
    selector:
        k8s-app: devops-test-task
    ports:
        - port: 80
          targetPort: 8080
          name: http
