k8s/somenamespace/devops-test-task/devops-test-task-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        nginx.ingress.kubernetes.io/ssl-redirect: "false"
    labels:
        k8s-app: devops-test-task
    name: devops-test-task
    namespace: somenamespace
spec:
    rules:
        - host: devops-test-task.local
          http:
              paths:
                  - backend:
                        service:
                            name: devops-test-task
                            port:
                                number: 80
                    path: /
                    pathType: ImplementationSpecific
    tls:
        - hosts:
              - devops-test-task.local
