k8s/somenamespace/devops-test-task/devops-test-task-networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: devops-test-task-in
    namespace: somenamespace
    labels:
        k8s-app: devops-test-task
spec:
    podSelector:
        matchLabels:
            k8s-app: devops-test-task
    policyTypes:
        - Ingress
    ingress:
        - ports:
              - port: 8080
                protocol: TCP


---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: devops-test-task-out
    namespace: somenamespace
    labels:
        k8s-app: devops-test-task
spec:
    podSelector:
        matchLabels:
            k8s-app: devops-test-task
    policyTypes:
        - Egress
    egress:
        - to:
              - ipBlock:
                    cidr: redis.ip/32
          ports:
              - port: 6379
                protocol: TCP
